kubernets/lab19_20_k8s_DaemonSet/ivolve_NameSpace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ivolve
  labels:
    name: ivolve
