kubernets/lab19_20_k8s_DaemonSet/monitor_NameSpace.yml
apiVersion: v1
kind: Namespace 
metadata:
  name: monitor
  labels:
    name: monitor
