kubernets/lab19_20_k8s_DaemonSet/app-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ivolve-deployment
  namespace: ivolve
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:

      tolerations:
        - key: "node"
          operator: "Equal"
          value: "worker"
          effect: "NoSchedule"

      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: node
                operator: In
                values:
                - worker

      imagePullSecrets:
        - name: dockerhub-secret
      containers:
      - name: mysql
        image: abdelrahmanelhelw/kubernets-app:1
        ports:
        - containerPort: 3000
        volumeMounts:
          - name: app-logs
            mountPath: /app/logs

        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"

      volumes:
        - name: app-logs
          persistentVolumeClaim:
            claimName: my-pvc
