kubernets/lab19_20_k8s_DaemonSet/networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-app-to-mysql
  namespace: ivolve
spec:
    podSelector:
      matchLabels:
        app: mysql
    policyTypes:
      - Ingress
    ingress:
      - from:
        - namespaceSelector:
            matchLabels:
              name: ivolve
        - podSelector:
            matchLabels:
              app: myapp
        ports:
        - port: 3306
          protocol: TCP
